--- a/transport/doc/dissertation/content/newcommands.tex
+++ b/transport/doc/dissertation/content/newcommands.tex
@@ -21,6 +21,10 @@
 \renewcommand{\ij}{_{i,j}} % _{i,j}
 \newcommand{\sumj}{\sum\limits_j}            % sum over all j
 \newcommand{\sumjnoti}{\sum\limits_{j\ne i}} % sum over all j not i
+\newcommand{\sumKSi}{\sum\limits_{K\subset S_i}} % sum over K in Si
+\newcommand{\sumKSij}{\sum\limits_{K\subset S_{i,j}}} % sum over K in Sij
+\newcommand{\intSi}{\int\limits_{S_i}}       % integral over support Si
+\newcommand{\intSij}{\int\limits_{S_{i,j}}}  % integral over dual support Sij
 
 \newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}} % partial derivative
 \newcommand{\ddt}[1]{\frac{d#1}{dt}} % ordinary derivative w.r.t. time
