added prelimiting option to MATLAB code and saved some prelimiting results

--- a/transport/doc/results/results.tex
+++ b/transport/doc/results/results.tex
@@ -10,8 +10,13 @@
 \setlength{\textwidth}{6.5in}
 
 \begin{document}
+
 \input{problem_descriptions}
 \input{void_to_absorber/description}
 \input{skew_void_to_absorber/description}
 \input{three_region/description}
+\input{prelimiting_void_to_absorber/description}
+
+\bibliographystyle{plain}
+\bibliography{../dissertation/references}
 \end{document}
