added classes for conservation law flux and linear transport flux

--- a/transport/doc/results/prelimiting_void_to_absorber/description.tex
+++ b/transport/doc/results/prelimiting_void_to_absorber/description.tex
@@ -46,4 +46,4 @@ CFL Number & $\nu = 0.8$\\
 \end{figure}
 %-------------------------------------------------------------------------------
 \subsection{Code and Version}
-MATLAB code, git commit hash ?
+MATLAB code, git commit hash c26faed531cde63ae8c80d693ea6f1998b1b5102
