--- a/transport/doc/results/results.tex
+++ b/transport/doc/results/results.tex
@@ -16,6 +16,7 @@
 \input{skew_void_to_absorber/description}
 \input{three_region/description}
 \input{prelimiting_void_to_absorber/description}
+\input{sourcevoid_to_absorber/description}
 
 \bibliographystyle{plain}
 \bibliography{../dissertation/references}
