added saturation value test problem

--- a/transport/doc/meetings/6-22-2015.tex
+++ b/transport/doc/meetings/6-22-2015.tex
@@ -2,9 +2,9 @@
 
 \begin{enumerate}
 %--------------------------------------------------------------------------------
-\incompleteitem{Obtain multidimensional results for explicit FCT.}
+\complete{Obtain multidimensional results for explicit FCT.}
 
-In progress.
+See the results document.
 %--------------------------------------------------------------------------------
 \incompleteitem{Compare symmetric limiter with upwind limiter.}
 
@@ -140,14 +140,14 @@ in \cite{kuzmin_FCT}, unlike our objective, which is to satisfy a discrete
 maximum principle, which happens to have a lower bound greater than or
 equal to zero.
 %--------------------------------------------------------------------------------
-\incompleteitem{Evaluate the benefit of Kuzmin's ``prelimiting'' step.}
+\completeitem{Evaluate the benefit of Kuzmin's ``prelimiting'' step.}
 
 Equation (84) of \cite{kuzmin_FCT} gives Kuzmin's prelimiting step:
 \[
   F\ij := 0 \qquad \mbox{if}\quad F\ij \left(\tilde{U}_i-\tilde{U}_j\right)\leq 0,
 \]
 
-The prelimiting step has not yet been re-implemented.
+See the results document, which has a section on the effect of prelimiting.
 %--------------------------------------------------------------------------------
 \incompleteitem{For the defect correction scheme, try damping viscosity updates.}
 
