--- a/transport/doc/meetings/6-23-2015.tex
+++ b/transport/doc/meetings/6-23-2015.tex
@@ -34,9 +34,8 @@ artificial dissipation results in spurious oscillations, so
 it was suggested to try using very small $\sigma$ in this
 region instead of $\sigma=0$.
 %--------------------------------------------------------------------------------
-\incompleteitem{Try a three-region problem.}
-It is desirable to see the solution for a problem with three
-different saturation values $q/\sigma$.
+\completeitem{Try a three-region problem.}
+See the results document.
 %--------------------------------------------------------------------------------
 \incompleteitem{Try a two-region problem with equal saturation values
 but different values for $q$ and $\sigma$.}
