--- a/transport/doc/results/results.tex
+++ b/transport/doc/results/results.tex
@@ -11,12 +11,14 @@
 
 \begin{document}
 
+\tableofcontents
 \input{problem_descriptions}
 \input{void_to_absorber/description}
 \input{skew_void_to_absorber/description}
 \input{three_region/description}
 \input{prelimiting_void_to_absorber/description}
-\input{sourcevoid_to_absorber/description}
+\input{source_void_to_absorber/description}
+\input{saturation/description}
 
 \bibliographystyle{plain}
 \bibliography{../dissertation/references}
