small work on docs

--- a/transport/doc/meetings/6-22-2015.tex
+++ b/transport/doc/meetings/6-22-2015.tex
@@ -2,7 +2,7 @@
 
 \begin{enumerate}
 %--------------------------------------------------------------------------------
-\complete{Obtain multidimensional results for explicit FCT.}
+\completeitem{Obtain multidimensional results for explicit FCT.}
 
 See the results document.
 %--------------------------------------------------------------------------------
@@ -148,6 +148,7 @@ Equation (84) of \cite{kuzmin_FCT} gives Kuzmin's prelimiting step:
 \]
 
 See the results document, which has a section on the effect of prelimiting.
+Prelimiting seems to have very little effect.
 %--------------------------------------------------------------------------------
 \incompleteitem{For the defect correction scheme, try damping viscosity updates.}
 
