--- a/transport/doc/meetings/6-23-2015.tex
+++ b/transport/doc/meetings/6-23-2015.tex
@@ -37,12 +37,15 @@ region instead of $\sigma=0$.
 \completeitem{Try a three-region problem.}
 See the results document.
 %--------------------------------------------------------------------------------
-\incompleteitem{Try a two-region problem with equal saturation values
+\completeitem{Try a two-region problem with equal saturation values
 but different values for $q$ and $\sigma$.}
 If the saturation value of $q/\sigma$ is reached in the first
 region, one would like to ensure that if the second region has
 the same saturation value $q/\sigma$, but different values of
 $q$ and $\sigma$, then there should be no numerical artifacts at
 the interface between the two regions.
+
+See the results document. There appears to be a very small numerical
+artifact at the interface.
 %--------------------------------------------------------------------------------
 \end{enumerate}
