--- a/transport/doc/results/saturation/description.tex
+++ b/transport/doc/results/saturation/description.tex
@@ -30,4 +30,4 @@ Entropy Time Integrator & BE\\
 \end{figure}
 %-------------------------------------------------------------------------------
 \subsection{Code and Version}
-Deal.ii code, git commit hash 
+Deal.ii code, git commit hash 8c4a949aa006d49df9af475de3e6498c4e821c5c
