--- a/transport/doc/meetings/meetings.tex
+++ b/transport/doc/meetings/meetings.tex
@@ -42,6 +42,7 @@ Legend:
 \end{itemize}
 \input{6-22-2015}
 \input{6-23-2015}
+\input{7-21-2015}
 \bibliographystyle{plain}
 \bibliography{../dissertation/references}
 \end{document}
