started nonlinear solver, started deal.II presentation

--- a/transport/doc/dissertation/content/transient_FCT.tex
+++ b/transport/doc/dissertation/content/transient_FCT.tex
@@ -4,7 +4,7 @@
 In this section, the general FCT scheme for the transient case is presented.
 The flux correction vector $\f$ is defined such that
 \begin{equation}\label{fdef_semidiscrete}
-   \M^L\ddt{U^{H}} + \A^L\U^H(t) = \b(t) + \f \eqp
+   \M^L\ddt{\U^{H}} + \A^L\U^H(t) = \b(t) + \f \eqp
 \end{equation}
 Decomposing the correction flux into $\F$ and applying a limiter $\L$ gives
 \begin{equation}\label{limited_semidiscrete}
